update for new changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,15 @@ project(programming_pearls)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES main.cpp)
-add_executable(sort_run ${SOURCE_FILES})
-
 include_directories(column_11_sorting)
+
+add_subdirectory(lib/googletest)
+add_subdirectory(column_1_cracking_the_oyster)
+add_subdirectory(column_1_cracking_the_oyster_tests)
+add_subdirectory(column_2_algorithms)
 
 add_subdirectory(column_11_sorting)
 add_subdirectory(column_11_sorting_tests)
+add_subdirectory(column_12_sampling)
 
-target_link_libraries(sort_run column_11_sorting)
+target_link_libraries(column_11_sorting)
