--- a/column_1_cracking_the_oyster/CMakeLists.txt
+++ b/column_1_cracking_the_oyster/CMakeLists.txt
@@ -1,14 +1,15 @@
 cmake_minimum_required(VERSION 3.3)
 
-project(column_11_sorting)
+project(column_1_cracking_the_oyster)
 
 add_definitions(-std=c++11)
 
-#set(HEADER_FILES
-#        )
-
-set(SOURCE_FILES
-        sort.cpp
+set(HEADER_FILES
+        sort.h
         )
 
-add_library(column_11_sorting STATIC ${SOURCE_FILES} ${HEADER_FILES})
+set(SOURCE_FILES
+        bitsort.cpp bitsortgen.cpp qsortints.cpp sortints.cpp spacebitsort.cpp
+        )
+
+add_library(column_1_cracking_the_oyster STATIC ${SOURCE_FILES} ${HEADER_FILES})
