--- a/column_1_cracking_the_oyster_tests/CMakeLists.txt
+++ b/column_1_cracking_the_oyster_tests/CMakeLists.txt
@@ -1,15 +1,15 @@
 cmake_minimum_required(VERSION 3.3)
 
-project(column_1_cracking_the_oyster)
+project(column_1_cracking_the_oyster_tests)
 
 add_definitions(-std=c++11)
 
-set(HEADER_FILES
-        sort.h
-        )
+#set(HEADER_FILES
+#        sort.h
+#        )
 
 set(SOURCE_FILES
-        bitsort.cpp bitsortgen.cpp qsortints.cpp sortints.cpp spacebitsort.cpp
+        testsort.cpp
         )
 
-add_library(column_1_cracking_the_oyster STATIC ${SOURCE_FILES} ${HEADER_FILES})
+add_library(column_1_cracking_the_oyster_tests STATIC ${SOURCE_FILES} ${HEADER_FILES})
