--- a/column_2_algorithms/CMakeLists.txt
+++ b/column_2_algorithms/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.3)
 
-project(column_1_cracking_the_oyster_tests)
+project(column_2_algorithms)
 
 add_definitions(-std=c++11)
 
@@ -9,7 +9,7 @@ add_definitions(-std=c++11)
 #        )
 
 set(SOURCE_FILES
-        testsort.cpp
+        gcd.c myrotate-2.cpp rotate.c sign.c squash.c
         )
 
-add_library(column_1_cracking_the_oyster_tests STATIC ${SOURCE_FILES} ${HEADER_FILES})
+add_library(column_2_algorithms STATIC ${SOURCE_FILES} ${HEADER_FILES})
