--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(programming_pearls)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-include_directories(column_11_sorting)
+include_directories(column_11_sorting column_1_cracking_the_oyster column_2_algorithms column_12_sampling)
 
 add_subdirectory(lib/googletest)
 add_subdirectory(column_1_cracking_the_oyster)
@@ -15,3 +15,4 @@ add_subdirectory(column_11_sorting_tests)
 add_subdirectory(column_12_sampling)
 
 target_link_libraries(column_11_sorting)
+target_link_libraries(column_1_cracking_the_oyster)
