--- a/column_1_cracking_the_oyster/CMakeLists.txt
+++ b/column_1_cracking_the_oyster/CMakeLists.txt
@@ -5,11 +5,12 @@ project(column_1_cracking_the_oyster)
 add_definitions(-std=c++11)
 
 set(HEADER_FILES
-        sort.h
+#        sort_weiss.h
+        column1.h
         )
 
-set(SOURCE_FILES
-        bitsort.cpp bitsortgen.cpp qsortints.cpp sortints.cpp spacebitsort.cpp
-        )
+#set(SOURCE_FILES
+#        bitsort.cpp bitsortgen.cpp qsortints.cpp sortints.cpp spacebitsort.cpp
+#        )
 
 add_library(column_1_cracking_the_oyster STATIC ${SOURCE_FILES} ${HEADER_FILES})
