--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.3)
-project(programming_pearls)
+project(programming_pearls C CXX)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
@@ -9,6 +9,7 @@ add_subdirectory(lib/googletest)
 add_subdirectory(column_1_cracking_the_oyster)
 add_subdirectory(column_1_cracking_the_oyster_tests)
 add_subdirectory(column_2_algorithms)
+add_subdirectory(column_2_algorithms_tests)
 
 add_subdirectory(column_11_sorting)
 add_subdirectory(column_11_sorting_tests)
@@ -16,3 +17,4 @@ add_subdirectory(column_12_sampling)
 
 target_link_libraries(column_11_sorting)
 target_link_libraries(column_1_cracking_the_oyster)
+target_link_libraries(column_2_algorithms)
