--- a/column_1_cracking_the_oyster_tests/CMakeLists.txt
+++ b/column_1_cracking_the_oyster_tests/CMakeLists.txt
@@ -9,5 +9,10 @@ include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 add_executable(runBitSortTests
         bit_sort_test.cpp)
 
+
+add_executable(runWeissSortTests
+        weiss_sort_test.cpp)
+
 target_link_libraries(runBitSortTests gtest gtest_main)
+target_link_libraries(runWeissSortTests gtest gtest_main)
 #target_link_libraries(runBitSortTests column_1_cracking_the_oyster)
