--- a/column_11_sorting_tests/basic_tests/CMakeLists.txt
+++ b/column_11_sorting_tests/basic_tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
 add_executable(runBasicSortTests
-        basic_check.cpp
+#        basic_check.cpp
         sort_check.cpp)
 
 target_link_libraries(runBasicSortTests gtest gtest_main)
