add column 8 with test cases

--- a/column_11_sorting/CMakeLists.txt
+++ b/column_11_sorting/CMakeLists.txt
@@ -8,8 +8,8 @@ set(HEADER_FILES
         sort.h
         )
 
-set(SOURCE_FILES
-        sort.cpp
-        )
+#set(SOURCE_FILES
+#        sort.cpp
+#        )
 
 add_library(column_11_sorting STATIC ${SOURCE_FILES} ${HEADER_FILES})
