--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ include_directories(
         column_1_cracking_the_oyster
         column_2_algorithms
         column_5_a_small_matter_of_programming
+        column_8_algorithm_design_techniques
         column_9_code_tuning
         column_11_sorting
         column_12_sampling
@@ -20,15 +21,15 @@ add_subdirectory(column_2_algorithms)
 add_subdirectory(column_2_algorithms_tests)
 add_subdirectory(column_5_a_small_matter_of_programming)
 add_subdirectory(column_5_a_small_matter_of_programming_tests)
+add_subdirectory(column_8_algorithm_design_techniques)
+add_subdirectory(column_8_algorithm_design_techniques_tests)
 add_subdirectory(column_9_code_tuning)
 add_subdirectory(column_9_code_tuning_tests)
-
 add_subdirectory(column_11_sorting)
 add_subdirectory(column_11_sorting_tests)
 add_subdirectory(column_12_sampling)
 add_subdirectory(column_14_heaps)
 add_subdirectory(column_14_heaps_tests)
-
 add_subdirectory(appendix)
 
 target_link_libraries(column_1_cracking_the_oyster)
