--- a/column_12_sampling/CMakeLists.txt
+++ b/column_12_sampling/CMakeLists.txt
@@ -4,12 +4,12 @@ project(column_12_sampling)
 
 add_definitions(-std=c++11)
 
-#set(HEADER_FILES
-#        sort.h
-#        )
-
-set(SOURCE_FILES
-        sortedrand.cpp
+set(HEADER_FILES
+        column12.h
         )
+
+#set(SOURCE_FILES
+#        sortedrand.cpp
+#        )
 
 add_library(column_12_sampling STATIC ${SOURCE_FILES} ${HEADER_FILES})
