add new solutions with refactoring.

--- a/Elements_of_Programming_Interviews/CMakeLists.txt
+++ b/Elements_of_Programming_Interviews/CMakeLists.txt
@@ -15,6 +15,7 @@ include_directories(
         Chapter_13_Hash_Tables
         Chapter_14_Sorting
         Chapter_15_Binary_Search_Trees
+        Chapter_16_Recursion
         )
 
 add_subdirectory(Chapter_5_Primitive_Types)
@@ -39,3 +40,5 @@ add_subdirectory(Chapter_14_Sorting)
 add_subdirectory(Chapter_14_Sorting_tests)
 add_subdirectory(Chapter_15_Binary_Search_Trees)
 add_subdirectory(Chapter_15_Binary_Search_Trees_tests)
+add_subdirectory(Chapter_16_Recursion)
+add_subdirectory(Chapter_16_Recursion_tests)
