add new solutions and refactoring existing codes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,4 @@ add_subdirectory(Data_Structures_and_Algorithm_Analysis_in_Cpp)
 add_subdirectory(The_Algorithm_Design_Manual)
 add_subdirectory(The_C_Programming_Language)
 add_subdirectory(Elements_of_Programming_Interviews)
+add_subdirectory(The_Art_of_Computer_Programming)
