fix errors from CMAKE. add_library is not needed.

--- a/Programming_Pearls/CMakeLists.txt
+++ b/Programming_Pearls/CMakeLists.txt
@@ -42,7 +42,7 @@ add_subdirectory(appendix)
 #add_subdirectory(addendum)
 #add_subdirectory(addendum_tests)
 
-target_link_libraries(column_1_cracking_the_oyster)
-target_link_libraries(column_2_algorithms)
-target_link_libraries(column_11_sorting)
-target_link_libraries(column_14_heaps)
+#target_link_libraries(column_1_cracking_the_oyster)
+#target_link_libraries(column_2_algorithms)
+#target_link_libraries(column_11_sorting)
+#target_link_libraries(column_14_heaps)
