--- a/Programming_Pearls/column_1_cracking_the_oyster/CMakeLists.txt
+++ b/Programming_Pearls/column_1_cracking_the_oyster/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.3)
 
-project(column_1_cracking_the_oyster)
+project(column_1_cracking_the_oyster C CXX)
 
 add_definitions(-std=c++11)
 
@@ -14,4 +14,4 @@ set(HEADER_FILES
 #        bitsort.cpp bitsortgen.cpp qsortints.cpp sortints.cpp spacebitsort.cpp
 #        )
 
-add_library(column_1_cracking_the_oyster STATIC ${SOURCE_FILES} ${HEADER_FILES})
+#add_library(column_1_cracking_the_oyster STATIC ${SOURCE_FILES} ${HEADER_FILES})
