--- a/Programming_Pearls/column_9_code_tuning/CMakeLists.txt
+++ b/Programming_Pearls/column_9_code_tuning/CMakeLists.txt
@@ -11,4 +11,4 @@ set(HEADER_FILES
 #        search.c.c
 #        )
 
-add_library(column_9_code_tuning STATIC ${SOURCE_FILES} ${HEADER_FILES})
+#add_library(column_9_code_tuning STATIC ${SOURCE_FILES} ${HEADER_FILES})
