fix for error from CMAKE and rename refactor function in CLion.

--- a/Programming_Pearls/column_12_sampling/CMakeLists.txt
+++ b/Programming_Pearls/column_12_sampling/CMakeLists.txt
@@ -8,8 +8,8 @@ set(HEADER_FILES
         column12.h
         )
 
-#set(SOURCE_FILES
-#        sortedrand.cpp
-#        )
+set(SOURCE_FILES
+        ../dummy.cpp
+        )
 
-#add_library(column_12_sampling STATIC ${SOURCE_FILES} ${HEADER_FILES})
+add_library(column_12_sampling STATIC ${SOURCE_FILES} ${HEADER_FILES})
