--- a/Programming_Pearls/column_2_algorithms/CMakeLists.txt
+++ b/Programming_Pearls/column_2_algorithms/CMakeLists.txt
@@ -8,8 +8,8 @@ set(HEADER_FILES
         column2.h
         )
 
-#set(SOURCE_FILES
-#        gcd.c myrotate-2.cpp rotate.c sign.c squash.c
-#        )
+set(SOURCE_FILES
+        ../dummy.cpp
+        )
 
-#add_library(column_2_algorithms STATIC ${SOURCE_FILES} ${HEADER_FILES})
+add_library(column_2_algorithms STATIC ${SOURCE_FILES} ${HEADER_FILES})
