--- a/Programming_Pearls/column_5_a_small_matter_of_programming/CMakeLists.txt
+++ b/Programming_Pearls/column_5_a_small_matter_of_programming/CMakeLists.txt
@@ -8,8 +8,8 @@ set(HEADER_FILES
         column5.h
         )
 
-#set(SOURCE_FILES
-#        search.c.c
-#        )
+set(SOURCE_FILES
+        ../dummy.cpp
+        )
 
-#add_library(column_5_small_matter_of_programming STATIC ${SOURCE_FILES} ${HEADER_FILES})
+add_library(column_5_small_matter_of_programming STATIC ${SOURCE_FILES} ${HEADER_FILES})
