refactoring codes and add variant solutions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
-cmake_minimum_required(VERSION 3.3)
-project(Algorithm_analysis C CXX)
+cmake_minimum_required(VERSION 3.6)
+project(programming_pearls)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_STANDARD 14)
 
+add_subdirectory(Data_Structures_and_Algorithm_Analysis_in_Cpp)
+add_subdirectory(Elements_of_Programming_Interviews)
 add_subdirectory(lib/googletest)
 add_subdirectory(Programming_Pearls)
-add_subdirectory(Data_Structures_and_Algorithm_Analysis_in_Cpp)
 add_subdirectory(The_Algorithm_Design_Manual)
-add_subdirectory(The_C_Programming_Language)
-add_subdirectory(Elements_of_Programming_Interviews)
 add_subdirectory(The_Art_of_Computer_Programming)
+add_subdirectory(The_C_Programming_Language)
