--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,4 @@ add_subdirectory(Programming_Pearls)
 add_subdirectory(The_Algorithm_Design_Manual)
 add_subdirectory(The_Art_of_Computer_Programming)
 add_subdirectory(The_C_Programming_Language)
+add_subdirectory(Google_Test_Samples)
