dd goggle test examples and add new testing environment for the problem 6.9 in EPI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,4 @@ add_subdirectory(The_Algorithm_Design_Manual)
 add_subdirectory(The_Art_of_Computer_Programming)
 add_subdirectory(The_C_Programming_Language)
 add_subdirectory(Google_Test_Samples)
+add_subdirectory(Cpp_Primer_Plus)
