--- a/Google_Test_Samples/CMakeLists.txt
+++ b/Google_Test_Samples/CMakeLists.txt
@@ -19,15 +19,15 @@ add_executable(sample9_unittest sample9_unittest.cc)
 add_executable(sample10_unittest sample10_unittest.cc)
 add_executable(mock_turtle_test mock_turtle_test.cpp)
 
-target_link_libraries(sample1_unittest gtest gtest_main)
-target_link_libraries(sample2_unittest gtest gtest_main)
-target_link_libraries(sample3_unittest gtest gtest_main)
-target_link_libraries(sample4_unittest gtest gtest_main)
-target_link_libraries(sample5_unittest gtest gtest_main)
-target_link_libraries(sample6_unittest gtest gtest_main)
-target_link_libraries(sample7_unittest gtest gtest_main)
-target_link_libraries(sample8_unittest gtest gtest_main)
-target_link_libraries(sample10_unittest gtest gtest_main)
+target_link_libraries(sample1_unittest gtest gmock gtest_main)
+target_link_libraries(sample2_unittest gtest gmock gtest_main)
+target_link_libraries(sample3_unittest gtest gmock gtest_main)
+target_link_libraries(sample4_unittest gtest gmock gtest_main)
+target_link_libraries(sample5_unittest gtest gmock gtest_main)
+target_link_libraries(sample6_unittest gtest gmock gtest_main)
+target_link_libraries(sample7_unittest gtest gmock gtest_main)
+target_link_libraries(sample8_unittest gtest gmock gtest_main)
+target_link_libraries(sample10_unittest gtest gmock gtest_main)
 target_link_libraries(mock_turtle_test gmock gtest gtest_main)
 
 set(HEADER_FILES
